--- a/zadanie3/docker-compose.yml
+++ b/zadanie3/docker-compose.yml
@@ -1,1 +1,11 @@
-
+version: '3'
+services:
+  ebiznes:
+    build: .
+    ports:
+      - 12345: 9000
+      - 12346: 3000
+    volumes:
+      - ./:/home/olgazalinska/projekt/sklep
+    working_dir: /home/olgazalinska/projekt/sklep
+    command: bash -c "/usr/local/sbt/bin/sbt run"
